# thaddeus

./: .browserslistrc  .dockerignore  .gitattributes  .gitignore  .oxfmtrc.json  .oxlintrc.json  .prototools  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README  README.md  bunfig.toml  docker-entrypoint.sh  fly.toml  github.md  install.sh  moon.yml  package.json  strata-five-lens-review.md  stylelint.config.js  the-new-age-of-source-control.html  the-new-age-of-source-control.html.20260622-123121.bak  transcript.md  tsconfig.json  tsconfig.oxlint.json  video.md  xposts.md
.github/workflows/: ci.yml  release.yml
.moon/: workspace.yml
.moon/tasks/: bun-common.yml  tag-publishable.yml  tag-tsdown.yml
apps/docs/: README.md  moon.yml  next.config.mjs  package.json  postcss.config.mjs  tsconfig.json
apps/landing/: README.md  moon.yml  package.json  tsconfig.json  vite.config.ts
docs/: deploy.md  getting-started.md
docs/plans/: 2026-06-22-pillar-01-encrypted-capability-store.md  2026-06-23-pillar-02-membrane.md  2026-06-23-pillar-03-operation-log.md  2026-06-23-pillar-04-provenance.md  2026-06-24-pillar-05-virtual-fs.md  2026-06-24-pillar-06-platform.md  2026-06-24-pillar-07-reputation.md  2026-06-25-cli.md  2026-06-25-persistence.md  2026-06-25-pillar-09-agents.md  2026-06-25-server.md  2026-06-30-multi-writer.md  (+7 more)
integration/: moon.yml  package.json  tsconfig.json
lazythad/: Cargo.toml  README.md
lazythad/src/: app.rs  client.rs  live.rs  main.rs  query.rs  ui.rs
patches/: libsodium-wrappers-sumo@0.7.16.patch
(+90 files in other folders)
